# e2i_causal_analytics

./: .auto-claude-status  .claudeignore  .dockerignore  .env.dev  .env.dev.backup  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .spectral.yml  =0.2.0  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_ADMIN.md  FRAMEWORK_INSTALLATION_SUMMARY.md  INFRASTRUCTURE.md  MIGRATION_AUDIT_REPORT.md  Makefile  OOM_FIX_README.md  QUICKSTART.md  QUICK_START.md  README.md  TEST_COVERAGE_REPORT.md  TEST_SUMMARY.md  build-progress.txt  codecov.yml  context.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  e2i-workspace.code-workspace  implementation_plan.json  init.sh  project_index.json  pyproject.toml  requirements-dev.txt  requirements-ragas.txt  requirements-synthetic.txt  (+2 more)
.claude/: AGENT_IMPLEMENTATION_AUDIT.md  AGENT_IMPLEMENTATION_PROTOCOL.md  FRAMEWORK_GAPS_TODO.md  MEMORY.md  codebase_index.md  gap_resolution_summary.md  implementation_plan.md  mcp.json  settings.json  troubleshooting.md
.claude/.agent_docs/: ml-patterns.md
.claude/PRPs/: mcp-skills-implementation-plan.md  observability-audit-remediation-plan.md  observability-remediation-execution.md  skills-vs-mcp-evaluation.md
.claude/agents/: architect.md  product-manager.md  security.md
.claude/commands/: README.md  _ARGUMENT_VALIDATION_TEMPLATE.md  architect.md  code-review.md  create-architecture-documentation.md  create-prd.md  design-database-schema.md  end-to-end-feature.md  framework-init.md  pm.md  security.md  setup-docker-containers.md  shard-doc.md  supabase-backup-manager.md  supabase-data-explorer.md  supabase-schema-sync.md  (+5 more)
.github/: CODEOWNERS
Chatbot memory/: 008_chatbot_memory_tables.sql:Zone.Identifier  CHATBOT_MEMORY_INTEGRATION.md  CHATBOT_MEMORY_INTEGRATION.md:Zone.Identifier  E2ICopilotProvider.tsx:Zone.Identifier  README.md  README.md:Zone.Identifier  usage.tsx  usage.tsx:Zone.Identifier
CohortConstructor/: CLAUDE.md
Ontology/: grafiti_config.py  inference_engine.py  schema_compiler.py  validator.py
config/: 005_memory_config.yaml  agent_config.yaml  agent_config_v3.yaml.backup  alert_config.yaml  autoscale.yml  cohort_vocabulary.yaml  confidence_logic.yaml  digital_twin_config.yaml  domain_vocabulary.yaml  domain_vocabulary_v4.2.0.yaml  drift_monitoring.yaml  experiment_lifecycle.yaml  feast_materialization.yaml  filter_mapping.yaml  gepa_config.yaml  kpi_definitions.yaml  library_routing.yaml  model_endpoints.yaml  observability.yaml  optuna_config.yaml  outcome_truth_rules.yaml  self_improvement.yaml  supabase_self_hosted.example.env  visualization_rules_v4_1.yaml
deploy/: e2i-bentoml.env  e2i-bentoml.service
docker/: COMPUTATIONAL_RESOURCE_OPTIMIZATION.md  DEPLOYMENT_STRATEGY.md  DOCKER_ASSESSMENT.md  Dockerfile  Dockerfile.feast  FRONTEND_SETUP_REQUIRED.md  HEALTH_CHECK_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  MULTI_WORKER_AUTOSCALING_GUIDE.md  Makefile  OVERALL_PROGRESS_STATUS.md  PRIORITY_1_COMPLETION_SUMMARY.md  PRIORITY_2_COMPLETION_SUMMARY.md  PRIORITY_3_COMPLETION_SUMMARY.md  PROGRESS_CHECKPOINT.md  README.md  SESSION_COMPLETE.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.opik.yml  docker-compose.secure.yml  docker-compose.yml  e2i_docker_volume_strategy.html  env.example
docs/: AB_TESTING.md  ARCHITECTURE.md  AUDIT_API_FRONTEND_ROUTING_PLAN.md  AUTHENTICATION.md  DOCKER_COMPOSE_USAGE.md  DOCKER_DEPLOYMENT_PLAN.md  DOCKER_SETUP_SUMMARY.md  E2I_Agentic_Memory_Documentation.html  E2I_Audit_Chain_Design.html  E2I_Causal_Validation_Protocol.html  E2I_Cognitive_RAG_DSPy_Integration.html  E2I_Cognitive_RAG_DSPy_Integration.html:Zone.Identifier  E2I_Cognitive_RAG_DSPy_Integration.html:sec.endpointdlp  E2I_DSPy_Feedback_Learner_Architecture_V2.html  E2I_DSPy_Feedback_Learner_Architecture_V2.html:Zone.Identifier  E2I_DSPy_Feedback_Learner_Architecture_V2.html:sec.endpointdlp  E2I_Data_Schema_Comprehensive_v1.1.json  E2I_Data_Schema_Comprehensive_v1.2.json  E2I_KPI_Verification_V3.md  E2I_Label_Lag_Resolution.html  E2I_MLOPS_GUIDE.md  E2I_ML_Foundation_Data_Flow.html  E2I_ML_V3_Package_README.md  E2I_PRD_V4.1_Update_Summary.md  E2I_Schema_Impact_Assessment.html  E2I_USER_GUIDE.md  Energy Score README.md  FEATURE_STORE.md  FEATURE_STORE_QUICKSTART.md  FRAMEWORK_README.md  FRONTEND_INTEGRATION_IMPLEMENTATION_PLAN.md  FRONTEND_REACT_TRANSFORMATION_PLAN.md  HOLISTIC_GAP_ANALYSIS.md  INFRASTRUCTURE.md  LLM_PROVIDER_CONFIGURATION.md  LOCAL_TESTING_GUIDE.md  MIGRATION_AUDIT_REPORT.md  MLFLOW_INTEGRATION_TODO.md  NLP_TOOLREGISTRY_TEST_SUMMARY.md  ONBOARDING.md  (+43 more)
feature_repo/: data_sources.py  entities.py  feature_store.yaml
frontend/: .env.production  E2I_Causal_Dashboard_V2.html  E2I_Causal_Dashboard_V3.html  eslint.config.js  graph_viewer.html  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
patches/ag-ui-langgraph/: README.md  pyproject.toml
patches/ag-ui-langgraph/ag_ui_langgraph/: agent.py  endpoint.py  utils.py
patches/copilotkit/: README.md  pyproject.toml
product-development/: README.md
scripts/: autoscaler.py  backup_cron.sh  backup_data_stores.sh  deploy-docker.sh  deploy.sh  deploy_model.py  droplet-connect.sh  droplet_report.sh  e2e_cognitive_rag_test.py  export_openapi.py  feast_materialize.py  feast_validate_migration.py  feature_store_example.py  generate_api_docs.sh  gepa_integration_test.py  gepa_phase2_hybrid.py  gepa_pilot.py  get_rag_search_stats.sql  health_check.sh  load_synthetic_data.py  mcp_connector_results.json  migrate_external_synthetic.py  opik-manager.sh  populate_graph_test_data.py  preflight-check.sh  run_frontend_tests_batched.sh  run_migration.py  run_migrations.sh  run_new_tests.sh  run_rag_migrations.py  run_ragas_eval.py  run_tests_batched.sh  run_tier0_test.py  run_tier1_5_test.py  sample_ml_pipeline.py  seed_falkordb.py  seed_falkordb_all.sh  seed_falkordb_init.py  seed_semantic_graph.py  setup_branch_protection.sh  (+7 more)
tests/: conftest.py
(+2245 files in other folders)
