[project]
name = "e2i-causal-analytics"
version = "4.1.0"
description = "Healthcare Engagement Intelligence - Multi-agent causal analytics platform for pharmaceutical drug adoption analysis"
authors = [
    {name = "E2I Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
keywords = ["causal-inference", "healthcare", "ai-agents", "rag", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.39.0",

    # Database & Storage
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pgvector>=0.3.0",
    "falkordb>=1.0.0",

    # Causal Inference
    "dowhy>=0.11.0",
    "econml>=0.15.0",
    "networkx>=3.0",

    # ML & Data Science
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",

    # MLOps Stack (7 Tools)
    "mlflow>=2.16.0",              # Experiment tracking
    "opik>=0.2.0",                 # LLM/Agent observability
    "feast>=0.40.0",               # Feature store
    "great-expectations>=1.0.0",   # Data quality validation
    "optuna>=3.6.0",               # Hyperparameter optimization
    "bentoml>=1.3.0",              # Model serving
    "shap>=0.46.0",                # Model interpretability

    # NLP & Embeddings
    "fasttext>=0.9.3",
    "rapidfuzz>=3.10.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.8.0",
    "openai>=1.54.0",

    # RAG & Prompt Engineering
    "ragas>=0.1.0",                # RAG evaluation
    "dspy-ai>=2.4.0",              # Prompt optimization

    # API & Web
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",

    # Data Validation
    "pyyaml>=6.0",
    "jsonschema>=4.23.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
