[project]
name = "e2i-causal-analytics"
version = "4.2.1"
description = "Healthcare Engagement Intelligence - Multi-agent causal analytics platform for pharmaceutical drug adoption analysis"
authors = [
    {name = "E2I Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
keywords = ["causal-inference", "healthcare", "ai-agents", "rag", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.39.0",

    # Database & Storage
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pgvector>=0.3.0",
    "falkordb>=1.0.0",

    # Causal Inference
    "dowhy>=0.11.0",
    "econml>=0.15.0",
    "networkx>=3.0",
    "causal-learn>=0.1.3.8",          # Structure learning (GES, PC, FCI, LiNGAM)

    # ML & Data Science
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",

    # MLOps Stack (7 Tools)
    "mlflow>=2.16.0",              # Experiment tracking
    "opik>=0.2.0",                 # LLM/Agent observability
    "feast>=0.40.0",               # Feature store
    "great-expectations>=1.0.0",   # Data quality validation
    "optuna>=3.6.0",               # Hyperparameter optimization
    "bentoml>=1.3.0",              # Model serving
    "shap>=0.46.0",                # Model interpretability

    # NLP & Embeddings
    "fasttext>=0.9.3",
    "rapidfuzz>=3.10.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.8.0",
    "openai>=1.54.0",

    # RAG & Prompt Engineering
    "ragas>=0.1.0",                # RAG evaluation
    "dspy-ai>=2.4.0",              # Prompt optimization

    # Knowledge Graph
    "graphiti-core[falkordb,anthropic]>=0.10.0",  # Temporal knowledge graph

    # API & Web
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",

    # Data Validation
    "pyyaml>=6.0",
    "jsonschema>=4.23.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",  # Note: conflicts with feast<9 requirement - see requirements-synthetic.txt
    "tqdm>=4.66.0",
    "python-json-logger>=2.0.7",

    # Dependency version pins to resolve conflicts
    "multiprocess>=0.70.16,<0.70.18",  # Pin to avoid dill>=0.4.0 requirement (conflicts with feast's dill~=0.3.0)

    # Task Queue & Workers
    "celery>=5.3.0",
    "kombu>=5.3.0",

    # Production Server
    "gunicorn>=22.0.0",

    # Visualization
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    "detect-secrets>=1.5.0",
    "ipython>=8.27.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module-import-not-at-top (common in conditional imports)
    "E711",  # none-comparison (SQLAlchemy uses `== None`)
    "E721",  # type-comparison
    "E741",  # ambiguous-variable-name (e.g., l, O)
    "B007",  # unused-loop-control-variable
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from-inside-except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["B017", "E722", "F811"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
# Load environment variables from .env file
env_files = [".env"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Global timeout: 30 seconds per test (safety net against hanging)
timeout = 30
timeout_method = "thread"
# Custom markers for test categorization
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires external services)",
    "e2e: End-to-end tests (full stack)",
    "slow: Tests that take longer than 10 seconds",
    "requires_redis: Test requires Redis connection",
    "requires_falkordb: Test requires FalkorDB connection",
    "requires_supabase: Test requires Supabase connection",
    "heavy_ml: Tests with heavy ML imports (dspy, econml, dowhy) - grouped on single worker",
    "xdist_group(name): Group tests to run on same worker (prevents DSPy import race conditions)",
]
# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
# Add custom options
# IMPORTANT: Limit parallel workers to prevent memory exhaustion
# System has 7.5GB RAM, heavy ML imports use ~500MB/worker
# Safe default: 4 workers = ~2GB for tests + ~4GB for OS/services
addopts = "-v --tb=short -n 4 --dist=loadscope"
# Enable test authentication bypass mode
env = [
    "E2I_TESTING_MODE=true",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
# Source directories to measure coverage for
source = ["src"]
# Branch coverage (track if/else branches)
branch = true
# Parallel mode for xdist workers
parallel = true
# Omit patterns from coverage measurement
omit = [
    "src/*/__init__.py",
    "src/*/migrations/*",
    "src/api/routes/__init__.py",
    "src/agents/*/__init__.py",
]

[tool.coverage.report]
# Minimum coverage threshold (fail if below)
# Achieved 70%+ via production hardening Phase 6 (batches 1-3)
fail_under = 70
# Show missing line numbers in report
show_missing = true
# Skip files with 100% coverage in report (reduces noise)
skip_covered = false
# Exclude patterns from coverage report
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    # Debug-only code
    "if __name__ == .__main__.:",
    "if settings.DEBUG:",
    # Abstract methods
    "@abstractmethod",
    # Defensive assertions
    "assert False",
]
# Precision for coverage percentages
precision = 2

[tool.coverage.html]
# HTML report output directory
directory = "htmlcov"
# Show contexts in HTML report
show_contexts = true

[tool.coverage.xml]
# XML report output for CI/CD integration
output = "coverage.xml"
