# copilotkit fork with relaxed fastapi constraint
# Original: https://github.com/CopilotKit/CopilotKit/tree/main/sdk-python
# Reason: Allow fastapi >=0.116.0 to fix starlette CVEs (CVE-2025-54121, CVE-2025-62727)
# Date: 2026-01-16

[tool.poetry]
name = "copilotkit"
version = "0.1.76.post1"
description = "CopilotKit python SDK (Patched for fastapi >=0.116)"
license = "MIT"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# PATCHED: Use local ag-ui-langgraph fork with relaxed constraint
# ag-ui-langgraph = { path = "../ag-ui-langgraph", extras = ["fastapi"] }
# For pip install, we reference the PyPI package but rely on our local fork being installed first
ag-ui-langgraph = { version = ">=0.0.23", extras = ["fastapi"] }
# PATCHED: Changed from ">=0.115.0,<0.116.0" to ">=0.115.12" to allow fastapi 0.116+
fastapi = ">=0.115.12"
langchain = ">=0.3.0"
langgraph = ">=0.3.25,<1.1.0"
partialjson = ">=0.0.8,<0.0.9"
toml = ">=0.10.2,<0.11.0"
crewai = { version = "==0.118.0", optional = true }

[tool.poetry.extras]
crewai = ["crewai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
